# TraceGate

./: .dockerignore  .env.production.example  .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile  PLAN.md  README.md  SECURITY.md  docker-compose.production.yml  docker-compose.yml
.github/workflows/: ci.yml
crates/tracegate/: Cargo.toml
crates/tracegate-config/: Cargo.toml
crates/tracegate-config/src/: lib.rs
crates/tracegate-core/: Cargo.toml
crates/tracegate-core/src/: lib.rs
crates/tracegate-demo-backend/: Cargo.toml
crates/tracegate-demo-backend/src/: main.rs
crates/tracegate-observability/: Cargo.toml
crates/tracegate-observability/src/: lib.rs
crates/tracegate-proxy/: Cargo.toml
crates/tracegate-proxy/benches/: release_overhead.rs
crates/tracegate-proxy/src/: admin.rs  lib.rs
crates/tracegate-proxy/tests/: proxy.rs
crates/tracegate-replay/: Cargo.toml
crates/tracegate-replay/src/: lib.rs
crates/tracegate-storage/: Cargo.toml
crates/tracegate-storage/postgres_migrations/: 202607060001_capture_store.sql  202607060002_replay_runs.sql  202607060003_plugin_decisions.sql
crates/tracegate-storage/sqlite_migrations/: 202607060001_capture_store.sql  202607060002_replay_runs.sql  202607060003_plugin_decisions.sql
crates/tracegate-storage/src/: lib.rs
crates/tracegate-wasm/: Cargo.toml
crates/tracegate-wasm/src/: lib.rs
crates/tracegate-wasm/wit/: policy.wit
crates/tracegate/src/: main.rs
deployments/gcp/compose/: docker-compose.production.yml  docker-compose.yml  prometheus.production.yml  prometheus.yml  tracegate.production.toml  tracegate.toml
deployments/gcp/compose/grafana/provisioning/dashboard-definitions/: tracegate-overview.json
deployments/gcp/compose/grafana/provisioning/dashboards/: tracegate-dashboards.yml
deployments/gcp/compose/grafana/provisioning/datasources/: tracegate-prometheus.yml
deployments/gcp/scripts/: backup-storage.ps1  bootstrap-project.ps1  build-image.ps1  deploy.ps1  full-demo.ps1  guard.ps1  inspect-captures.ps1  inspect-observability.ps1  inspect-replay.ps1  logs.ps1  rollback.ps1  smoke.ps1  status.ps1  terraform-apply.ps1  v1-infra.ps1  v1-live-verify.ps1  v1-stress.ps1
deployments/gcp/systemd/: tracegate.service
deployments/gcp/terraform/: main.tf  outputs.tf  variables.tf
docs/: ARCHITECTURE.md  PLUGIN_AUTHORING.md
examples/: tracegate.production.toml  tracegate.toml
examples/plugins/api-key-guard/: Cargo.toml
examples/plugins/api-key-guard/src/: lib.rs
examples/plugins/header-normalizer/: Cargo.toml
examples/plugins/header-normalizer/src/: lib.rs
proof/: v0.1-gateway-foundation.md  v0.2-observability.md  v0.3-capture-store.md  v0.4-replay-engine.md  v0.5-wasm-policy-hook.md  v0.6-production-storage-hardening.md  v0.7-console-full-demo.md  v1.0-release-quality.md
scripts/: cargo.ps1  full-demo.ps1  prepare-production-compose.ps1
tests/load/k6/: Dockerfile  README.md  v1-stress.js
