[workspace]
resolver = "3"
members = [
    "crates/tracegate",
    "crates/tracegate-config",
    "crates/tracegate-core",
    "crates/tracegate-observability",
    "crates/tracegate-proxy",
    "crates/tracegate-storage",
    "crates/tracegate-demo-backend",
]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/fullstack-nick/TraceGate"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "server", "server-auto", "tokio"] }
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry-http = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "trace"] }
prometheus-client = "0.25"
pin-project-lite = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
toml = "0.8"
tower = { version = "0.5", features = ["timeout"] }
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
uuid = { version = "1.17", features = ["v7", "serde"] }
