[package]
name = "tracegate-replay"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
http.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tracegate-core = { path = "../tracegate-core" }
tracegate-storage = { path = "../tracegate-storage" }
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
tempfile.workspace = true
