[package]
name = "tracegate-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracegate-core = { path = "../tracegate-core" }

[dev-dependencies]
tempfile.workspace = true
