[package]
name = "tracegate-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
http.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracegate-core = { path = "../tracegate-core" }
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

[dev-dependencies]
tempfile.workspace = true
