[package]
name = "tracegate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracegate-config = { path = "../tracegate-config" }
tracegate-observability = { path = "../tracegate-observability" }
tracegate-proxy = { path = "../tracegate-proxy" }
tracegate-replay = { path = "../tracegate-replay" }
tracegate-storage = { path = "../tracegate-storage" }
tokio.workspace = true
